cqlite-core/tests/snapshots/contract_stability_tests__contract_query_row_minimal.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 82
expression: row
---
{
  "values": {},
  "key": [
    255,
    0
  ],
  "metadata": {
    "version": null,
    "ttl": null,
    "tags": {}
  }
}
