cqlite-core/tests/snapshots/contract_stability_tests__contract_row_metadata_empty.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 391
expression: metadata
---
{
  "version": null,
  "ttl": null,
  "tags": {}
}
