cqlite-core/tests/snapshots/contract_stability_tests__contract_value_bigint.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 169
expression: "Value::BigInt(9223372036854775807i64)"
---
{
  "BigInt": 9223372036854775807
}
