cqlite-core/tests/snapshots/contract_stability_tests__contract_value_boolean.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 159
expression: "Value::Boolean(true)"
---
{
  "Boolean": true
}
