cqlite-core/tests/snapshots/contract_stability_tests__contract_value_counter.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 174
expression: "Value::Counter(1000)"
---
{
  "Counter": 1000
}
