cqlite-core/tests/snapshots/contract_stability_tests__contract_value_date.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 201
expression: "Value::Date(19724)"
---
{
  "Date": 19724
}
