cqlite-core/tests/snapshots/contract_stability_tests__contract_value_decimal.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 226
expression: "Value::Decimal { scale: 2, unscaled: vec![0x30, 0x39], }"
---
{
  "Decimal": {
    "scale": 2,
    "unscaled": [
      48,
      57
    ]
  }
}
