cqlite-core/tests/snapshots/contract_stability_tests__contract_value_duration.snap
---
source: cqlite-core/tests/contract_stability_tests.rs
assertion_line: 234
expression: "Value::Duration { months: 1, days: 15, nanos: 3600000000000i64, }"
---
{
  "Duration": {
    "months": 1,
    "days": 15,
    "nanos": 3600000000000
  }
}
